RESOLVED FIXED293633
"Open with Preview" context menu option on a PDF doesn't do anything after first invocation
https://bugs.webkit.org/show_bug.cgi?id=293633
Summary "Open with Preview" context menu option on a PDF doesn't do anything after fi...
Abrar Rahman Protyasha
Reported 2025-05-27 12:44:57 PDT
Attachments
Radar WebKit Bug Importer
Comment 1 2025-05-27 12:45:06 PDT
Abrar Rahman Protyasha
Comment 2 2025-05-27 12:45:22 PDT
Abrar Rahman Protyasha
Comment 3 2025-05-27 13:55:08 PDT
EWS
Comment 4 2025-05-27 15:55:41 PDT
Committed 295475@main (060704024191): <https://commits.webkit.org/295475@main> Reviewed commits have been landed. Closing PR #45958 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.